--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="https://www.instagram.com/aarchesxd" target="blank"><img src="img/iglogo.png" width="100px" height="100px" class="sa"></a>
             <a href="https://www.youtube.com/channel/UCP9hO0jJ_SG0O9WklZ3BjYA" target="blank"><img src="img/ytlogo.png" width="100px" height="100px" class="sa"></a>
             <a href="https://github.com/Archessxd" target="blank"><img src="img/githublogo.png" width="85" height="80px" class="github"></a>
-            <a href="https://open.spotify.com/user/06y9c56u7jl8gzojv5guvj0ms" target="blank"><img src="img/spotifylogo.png" width="80px" height="80spx" class="spotify"></a>
+            <a href="https://open.spotify.com/user/31gwy23dmt5ige7esjecncm5vhly?si=4e1c985f579d46b5" target="blank"><img src="img/spotifylogo.png" width="80px" height="80spx" class="spotify"></a>
         
         </td>
         </tr>
