--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
 <body>
 <div class="main_div">
     <table class="tablo" align="center">
-        <tr>
-        <td>
-            <center><h1 class="arches">Arches</h1></center>
-            <a href="https://www.instagram.com/archessxd" target="blank"><img src="img/iglogo.png" width="100px" height="100px" class="sa"></a>
-            <a href="https://www.youtube.com/channel/UCP9hO0jJ_SG0O9WklZ3BjYA" target="blank"><img src="img/ytlogo.png" width="100px" height="100px" class="sa"></a>
-            <a href="https://github.com/Archessxd" target="blank"><img src="img/githublogo.png" width="85" height="80px" class="github"></a>
-            <a href="https://open.spotify.com/user/31gwy23dmt5ige7esjecncm5vhly?si=4e1c985f579d46b5" target="blank"><img src="img/spotifylogo.png" width="80px" height="80spx" class="spotify"></a>
-        
-        </td>
-        </tr>
+        <div class="bgdiv">
+            <tr>
+            <td>
+                <center><h1 class="header">Arches</h1></center>
+                <p class="header3">Founder of <i><b>Rybe</b></i><p>
+            
+                <p class="header3">Socials :</p>
+                <center>
+            <tr>
+                <td><a href="https://www.instagram.com/archessxd" target="blank"><img src="img/iglogo.png" class="ig"></a></td>
+                <td><a href="https://www.youtube.com/channel/UCP9hO0jJ_SG0O9WklZ3BjYA" target="blank"><img src="img/ytlogo.png" class="yt"></a></td>
+                <td><a href="https://github.com/Archessxd" target="blank"><img src="img/githublogo.png" class="github"></a></td>
+                <td><a href="https://open.spotify.com/user/31gwy23dmt5ige7esjecncm5vhly?si=4e1c985f579d46b5" target="blank"><img src="img/spotifylogo.png" class="spotify"></a></td>  
+            </tr>
+            </center>
+            </td>
+            </tr>
+        </div>
     </table>
 </div>
 </body>
